fixed cosmetic bugs on mobile footer

--- a/assets/stylesheets/footer-links.scss
+++ b/assets/stylesheets/footer-links.scss
@@ -1,20 +1,24 @@
 .footer-links {
 
-  padding: 16px 0;
+  padding-top: 15px;
+  height: 35px;
   background-color: $maroon;
   text-align: center;
+
+  .link {
+    color: $purple;
+    font-family: $ag-light;
+    font-size: 12px;
+  }
 
   .border {
     height: 10px;
     width: 1px;
     background-color: $purple;
     display: inline-block;
+    position: relative;
+    top: 1px;
+    margin: 0 10px;
   }
 
-  .link {
-    color: $purple;
-    margin: 0 17px;
-    font-family: $ag-light;
-    font-size: 12px;
-  }
 }
