--- a/assets/stylesheets/social-media-links.scss
+++ b/assets/stylesheets/social-media-links.scss
@@ -1,12 +1,12 @@
 .social-media-links {
 
-  margin-top: 19px;
+  margin-top: 24px;
 
   .link {
-    height: 34px;
-    width: 34px;
-    background-size: 34px 34px;
-    margin: 0 6px;
+    height: 37px;
+    width: 37px;
+    background-size: 37px 37px;
+    margin: 0 7px;
   }
 
   .facebook-link {
